2007-05-10  Richard Stallman  <rms@gnu.org>

	* international/iso-cvt.el (iso-cvt-read-only): Ignore arguments.
	(iso-cvt-write-only): Likewise.

	* emacs-lisp/easy-mmode.el (define-minor-mode):
	Fix generated doc string.

	* startup.el (fancy-splash-text): Add URL of guided tour.
	Adjust horizontal and vertical whitespace.

	* progmodes/compile.el (compilation-handle-exit):
	Use run-hook-with-args to run compilation-finish-functions.

	* files.el (file-start-mode-alist): New variable.
	(magic-mode-regexp-match-limit): Doc fix.
	(set-auto-mode): Handle file-start-mode-alist.
	A little cleanup of structure.

2007-05-10  Davis Herring  <herring@lanl.gov>

	* calendar/timeclock.el (timeclock-in): Fix non-interactive
	workday specifications.
	(timeclock-log): Don't kill the log buffer if it already existed.

2007-05-08  Richard Stallman  <rms@gnu.org>

	* mail/mailabbrev.el (sendmail-pre-abbrev-expand-hook):
	Don't include non-self-insert commands in the exception for `-'.

2007-05-08  David Reitter  <david.reitter@gmail.com>

	* progmodes/python.el (python-guess-indent): Check non-nullness
	before comparing indent against the 2..8 interval.

2007-05-07  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/mac-win.el (mac-ts-unicode-for-key-event): Check if text is
	available.

2007-05-06  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/eldoc.el (turn-on-eldoc-mode): Doc fix.

2007-05-03  Ryan Yeske  <rcyeske@gmail.com>

	* net/rcirc.el (rcirc-timeout-seconds): Increase to prevent unwanted
	disconnections.

2007-05-01  Romain Francoise  <romain@orebokech.com>

	* dired-x.el: Revert 2007-04-06 change.

2007-04-30  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gud.el (gud-menu-map): Pdb can't handle SIGINT so
	don't put stop on toolbar.

2007-04-29  Stephen Berman  <Stephen.Berman@gmx.net>

	* find-dired.el (find-dired-filter): Propertize all text down to eob.

2007-04-29  Richard Stallman  <rms@gnu.org>
